--- a/LiveProductFeedSystem/web/index.xhtml
+++ b/LiveProductFeedSystem/web/index.xhtml
@@ -6,24 +6,29 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Facelet Title</title>
+        <title>Live Product Feed Login</title>
     </h:head>
     <h:body>
-        <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="100">
-                
-            </p:layoutUnit>
+        <h:form style="vertical-align: central">
+            <p:panelGrid columns="2">
+                <f:facet name="header">
+                    Live Product Feed Login
+                </f:facet>
 
-            <p:layoutUnit position="center" size="100">
-                <p:tabMenu activeIndex="3">
-                    <p:menuitem value="Overview" url="/ui/tabMenu.jsf" icon="ui-icon-star"/>
-                    <p:menuitem value="Demos" url="/ui/tabMenuDemos.jsf" icon="ui-icon-search" />
-                    <p:menuitem value="Documentation" url="/ui/tabMenuDocumentation.jsf" icon="ui-icon-document"/>
-                    <p:menuitem value="Support" url="/ui/tabMenuSupport.jsf" icon="ui-icon-wrench"/>
-                    <p:menuitem value="Social" url="/ui/tabMenuSocial.jsf" icon="ui-icon-person" />
-                </p:tabMenu>
-            </p:layoutUnit>
-        </p:layout>
+                <h:outputLabel for="txtUsername" value="Username: " />
+                <p:inputText id="txtUsername" value="" label="Username" >
+                    <f:validateLength minimum="2" /> 
+                </p:inputText>  
+                <p:message for="txtUsername" display="icon"/>  
+
+                <h:outputLabel for="txtPassword" value="Password: " />
+                <p:password id="txtPassword" value="" />
+
+                <f:facet name="footer">
+                    <p:commandButton type="button" value="Login"/>
+                </f:facet>
+            </p:panelGrid>
+        </h:form>
     </h:body>
 </html>
 
